src/test/ui/tool-attributes/diagnostic_item.stderr
error[E0658]: diagnostic items compiler internal support for linting
  --> $DIR/diagnostic_item.rs:1:1
   |
LL | #[rustc_diagnostic_item = "foomp"]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/29642
   = help: add `#![feature(rustc_attrs)]` to the crate attributes to enable

error[E0601]: `main` function not found in crate `diagnostic_item`
   |
   = note: consider adding a `main` function to `$DIR/diagnostic_item.rs`

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0601, E0658.
For more information about an error, try `rustc --explain E0601`.
